--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "zenml[server]>=0.60.0",
     "kaggle>=1.6.14",
+    "ipykernel>=6.29.5",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
